--- a/generic/charts/forwarder/values.yaml
+++ b/generic/charts/forwarder/values.yaml
@@ -1,8 +1,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+replicaCount: 1
+
 image:
-  repository: index.docker.io/logrange/collector
+  repository: index.docker.io/logrange/forwarder
   tag: latest
   pullPolicy: Always
 
@@ -25,8 +27,16 @@ resources: {}
 podAnnotations:
   seccomp.security.alpha.kubernetes.io/pod: docker/default
 
-nodeSelector: {}
+nodeSelector:
+  logrange.io/node: true
 
 tolerations: []
 
-affinity: {}
+affinity:
+  nodeAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        preference:
+          matchExpressions:
+            - key: logrange.io/node
+              operator: Exists
