--- a/generic/charts/logrange/values.yaml
+++ b/generic/charts/logrange/values.yaml
@@ -13,6 +13,9 @@ service:
   type: ClusterIP
   port: 9966
 
+volumes:
+  var: /var
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -32,4 +35,11 @@ nodeSelector: {}
 
 tolerations: []
 
-affinity: {}
+affinity:
+  nodeAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        preference:
+          matchExpressions:
+            - key: logrange.io/node
+              operator: Exists
