--- a/generic/charts/collector/values.yaml
+++ b/generic/charts/collector/values.yaml
@@ -7,7 +7,8 @@ image:
   pullPolicy: Always
 
 volumes:
-  var: /var
+  varlib: /var/lib
+  varlog: /var/log
   extdockercontainers: /ext/docker/containers
 
 resources: {}
