--- a/generic/charts/forwarder/templates/deployment.yaml
+++ b/generic/charts/forwarder/templates/deployment.yaml
@@ -32,11 +32,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: config
-              mountPath: /opt/logrange/lr/forward.json
-              subPath: forward.json
-            - name: config
-              mountPath: /opt/logrange/lr/log4g.properties
-              subPath: log4g.properties
+              mountPath: /opt/logrange/lr/config
 {{- range $key, $val := .Values.volumes }}
             - name: {{ $key }}
               mountPath: {{ $val }}
