--- a/generic/images/collector/Dockerfile
+++ b/generic/images/collector/Dockerfile
@@ -14,5 +14,5 @@ RUN mkdir -p /opt/logrange/lr
 COPY ["lr", "/opt/logrange/lr/"]
 
 ENTRYPOINT ["/opt/logrange/lr/lr", "collect", \
-"--config-file", "/opt/logrange/lr/collect.json", \
-"--log-config-file", "/opt/logrange/lr/log4g.properties"]
+"--config-file", "/opt/logrange/lr/config/collect.json", \
+"--log-config-file", "/opt/logrange/lr/config/log4g.properties"]
