--- a/generic/charts/forwarder/templates/configmap.yaml
+++ b/generic/charts/forwarder/templates/configmap.yaml
@@ -14,7 +14,7 @@ data:
       "Forwarder": {
         "Workers": [],
         "StateStoreIntervalSec": 20,
-        "ConfigReloadIntervalSec": 5
+        "SyncWorkersIntervalSec": 5
       },
 
       "Transport": {
