--- a/generic/charts/lr-configs/templates/logrange-configmap.yaml
+++ b/generic/charts/lr-configs/templates/logrange-configmap.yaml
@@ -1,37 +1,39 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "forwarder.name" . }}
+  name: logrange
   namespace: kube-system
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: {{ template "forwarder.name" . }}
+    app: logrange
 data:
-  forward.json: |
+  logrange.json: |
     {
-      "Forwarder": {
-        "Workers": [],
-        "StateStoreIntervalSec": 20,
-        "SyncWorkersIntervalSec": 5
-      },
-
-      "Transport": {
-        "ListenAddr": "logrange.kube-system.svc.cluster.local:9966",
+      "HostHostId": 0,
+      "HostLeaseTTLSec": 5,
+      "HostRegisterTimeoutSec": 0,
+      "PublicApiRpc": {
+        "ListenAddr": "0.0.0.0:9966",
         "TlsEnabled": false,
         "Tls2Way": false,
-        "TlsCertFile": "/opt/logrange/lr/tls/client.crt",
-        "TlsKeyFile": "/opt/logrange/lr/tls/client.key",
-        "TlsCAFile": "/opt/logrange/lr/tls/ca.pem"
+        "TlsCertFile": "/opt/logrange/tls/server.crt",
+        "TlsKeyFile": "/opt/logrange/tls/server.key",
+        "TlsCAFile": "/opt/logrange/tls/ca.pem"
       },
-
-      "Storage": {
-        "Type": "file",
-        "Location": "/var/lib/logrange/lr/storage/"
+      "JrnlCtrlConfig": {
+        "JournalsDir": "/var/lib/logrange/db/",
+        "MaxOpenFileDescs": 500,
+        "CheckFullScan": false,
+        "RecoverDisabled": false,
+        "RecoverLostDataOk": false,
+        "WriteIdleSec": 120,
+        "WriteFlushMs": 500,
+        "MaxChunkSize": 104857600,
+        "MaxRecordSize": 1048576
       }
     }
-
 
   log4g.properties: |
     # Console appender
