--- a/generic/charts/lr-collector/Chart.yaml
+++ b/generic/charts/lr-collector/Chart.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 appVersion: "1.0"
-name: logrange
-description: Log aggregation storage
+name: lr-collector
+description: Log collector agent
 version: 0.1.0
 keywords:
   - logrange
   - logging
   - logs
   - analytics
-  - aggregator
-  - storage
+  - agent
+  - collector
 home: https://github.com/logrange
 maintainers:
   - name: The logrange authors
