--- a/generic/charts/lr-collector/values.yaml
+++ b/generic/charts/lr-collector/values.yaml
@@ -1,17 +1,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
 image:
-  repository: index.docker.io/logrange/logrange
+  repository: index.docker.io/logrange/collector
   tag: latest
   pullPolicy: Always
-
-service:
-  annotations: {}
-  type: ClusterIP
-  port: 9966
 
 volumes:
   varlib: /var/lib
@@ -27,11 +20,4 @@ nodeSelector: {}
 
 tolerations: []
 
-affinity:
-  nodeAffinity:
-    preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 100
-        preference:
-          matchExpressions:
-            - key: logrange.io/node
-              operator: Exists
+affinity: {}
