--- a/generic/charts/lr-forwarder/Chart.yaml
+++ b/generic/charts/lr-forwarder/Chart.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 appVersion: "1.0"
-name: forwarder
+name: lr-forwarder
 description: Log forwarding agent
 version: 0.1.0
 keywords:
+  - logrange
   - logging
   - logs
   - analytics
