--- a/generic/charts/lr-forwarder/values.yaml
+++ b/generic/charts/lr-forwarder/values.yaml
@@ -4,14 +4,9 @@
 replicaCount: 1
 
 image:
-  repository: index.docker.io/logrange/logrange
+  repository: index.docker.io/logrange/forwarder
   tag: latest
   pullPolicy: Always
-
-service:
-  annotations: {}
-  type: ClusterIP
-  port: 9966
 
 volumes:
   varlib: /var/lib
