--- a/images/logrange/Dockerfile
+++ b/images/logrange/Dockerfile
@@ -14,5 +14,5 @@ RUN mkdir -p /opt/logrange
 COPY ["logrange", "/opt/logrange/"]
 
 ENTRYPOINT ["/opt/logrange/logrange", "start", \
-"--config-file", "/opt/logrange/logrange.json", \
-"--log-config-file", "/opt/logrange/log4g.properties"]
+"--config-file", "/opt/logrange/config/logrange.json", \
+"--log-config-file", "/opt/logrange/config/log4g.properties"]
