--- a/charts/lr-configs/templates/lr-forwarder-configmap.yaml
+++ b/charts/lr-configs/templates/lr-forwarder-configmap.yaml
@@ -1,39 +1,37 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: logrange
+  name: lr-forwarder
   namespace: kube-system
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: logrange
+    app: lr-forwarder
 data:
-  logrange.json: |
+  forward.json: |
     {
-      "HostHostId": 0,
-      "HostLeaseTTLSec": 5,
-      "HostRegisterTimeoutSec": 0,
-      "PublicApiRpc": {
-        "ListenAddr": "0.0.0.0:9966",
+      "Forwarder": {
+        "Workers": [],
+        "StateStoreIntervalSec": 20,
+        "SyncWorkersIntervalSec": 5
+      },
+
+      "Transport": {
+        "ListenAddr": "logrange.kube-system.svc.cluster.local:9966",
         "TlsEnabled": false,
         "Tls2Way": false,
-        "TlsCertFile": "/opt/logrange/tls/server.crt",
-        "TlsKeyFile": "/opt/logrange/tls/server.key",
-        "TlsCAFile": "/opt/logrange/tls/ca.pem"
+        "TlsCertFile": "/opt/logrange/lr/config/tls/client.crt",
+        "TlsKeyFile": "/opt/logrange/lr/config/tls/client.key",
+        "TlsCAFile": "/opt/logrange/lr/config/tls/ca.pem"
       },
-      "JrnlCtrlConfig": {
-        "JournalsDir": "/var/lib/logrange/db/",
-        "MaxOpenFileDescs": 500,
-        "CheckFullScan": false,
-        "RecoverDisabled": false,
-        "RecoverLostDataOk": false,
-        "WriteIdleSec": 120,
-        "WriteFlushMs": 500,
-        "MaxChunkSize": 104857600,
-        "MaxRecordSize": 1048576
+
+      "Storage": {
+        "Type": "file",
+        "Location": "/var/lib/logrange/lr/storage/"
       }
     }
+
 
   log4g.properties: |
     # Console appender
