--- a/charts/lr-logrange/Chart.yaml
+++ b/charts/lr-logrange/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: "1.0"
-name: logrange
+name: lr-logrange
 description: Log aggregation storage
 version: 0.1.0
 keywords:
