--- a/charts/lr-aggregator/Chart.yaml
+++ b/charts/lr-aggregator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: "1.0"
-name: lr-logrange
+name: lr-aggregator
 description: Log aggregation storage
 version: 0.1.0
 keywords:
