--- a/charts/lr-configs/templates/lr-logrange-configmap.yaml
+++ b/charts/lr-configs/templates/lr-logrange-configmap.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: lr-logrange
+  name: lr-aggregator
   namespace: kube-system
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: lr-logrange
+    app: lr-aggregator
 data:
   logrange.json: |
     {
