--- a/charts/lr-gravity/templates/configmap.yaml
+++ b/charts/lr-gravity/templates/configmap.yaml
@@ -27,7 +27,7 @@ data:
           "ForwarderConfigMap": "lr-forwarder"
         },
         "Transport": {
-          "ListenAddr": "logrange.kube-system.svc.cluster.local:9966",
+          "ListenAddr": "lr-aggregator.kube-system.svc.cluster.local:9966",
           "TlsEnabled": false,
           "Tls2Way": false,
           "TlsCertFile": "/opt/logrange/gravity/config/tls/client.crt",
