--- a/images/gravity/Dockerfile
+++ b/images/gravity/Dockerfile
@@ -13,6 +13,6 @@ RUN mkdir -p /opt/logrange/gravity
 
 COPY ["gravity", "/opt/logrange/gravity/"]
 
-ENTRYPOINT ["/opt/logrange/gravity/gravity", \
+ENTRYPOINT ["/opt/logrange/gravity/gravity", "start", \
 "--config-file", "/opt/logrange/gravity/config/adapter.json", \
 "--log-config-file", "/opt/logrange/gravity/config/log4g.properties"]
