--- a/charts/lr-gravity/templates/configmap.yaml
+++ b/charts/lr-gravity/templates/configmap.yaml
@@ -56,7 +56,7 @@ data:
             "Severity": "info",
             "Hostname": "lr-forwarder",
             "Tags": "{vars:pod}_{vars:ns}_{vars:cname}-{vars:cid}.log",
-            "Msg": "{{\"time\":\"{ts.format(2006-01-02T15:04:05.999999Z07:00)}\"}, \"stream\":\"{vars:stream}\", \"log\":{msg.json()}{}"
+            "Msg": "{{ "{{" }}\"time\":\"{ts.format(2006-01-02T15:04:05.999999Z07:00)}\"}, \"stream\":\"{vars:stream}\", \"log\":{msg.json()}{}"
           }
         }
       }
