add default pipe

--- a/charts/lr-configs/templates/lr-aggregator-configmap.yaml
+++ b/charts/lr-configs/templates/lr-aggregator-configmap.yaml
@@ -32,6 +32,13 @@ data:
         "WriteFlushMs": 500,
         "MaxChunkSize": 104857600,
         "MaxRecordSize": 1048576
+      },
+      "PipesConfig": {
+        "EnsureAtStart": [
+          {
+            "Name": "__default__"
+          }
+        ]
       }
     }
 
