update /var/lib mapping

--- a/charts/lr-aggregator/templates/deployment.yaml
+++ b/charts/lr-aggregator/templates/deployment.yaml
@@ -49,6 +49,7 @@ spec:
         - name: {{ $key }}
           hostPath:
             path: {{ $val }}
+            type: DirectoryOrCreate
 {{- end}}
       resources:
 {{ toYaml .Values.resources | indent 8 }}
