--- a/charts/lr-aggregator/values.yaml
+++ b/charts/lr-aggregator/values.yaml
@@ -14,8 +14,8 @@ service:
   port: 9966
 
 volumes:
-  varlib: /var/lib
   varlog: /var/log
+  varliblogrange: /var/lib/logrange
   extdockercontainers: /ext/docker/containers
 
 resources: {}
