--- a/charts/lr-forwarder/templates/deployment.yaml
+++ b/charts/lr-forwarder/templates/deployment.yaml
@@ -45,6 +45,7 @@ spec:
         - name: {{ $key }}
           hostPath:
             path: {{ $val }}
+            type: DirectoryOrCreate
 {{- end}}
       resources:
 {{ toYaml .Values.resources | indent 8 }}
