--- a/charts/lr-forwarder/values.yaml
+++ b/charts/lr-forwarder/values.yaml
@@ -9,8 +9,8 @@ image:
   pullPolicy: Always
 
 volumes:
-  varlib: /var/lib
   varlog: /var/log
+  varliblogrange: /var/lib/logrange
   extdockercontainers: /ext/docker/containers
 
 resources: {}
