--- a/charts/lr-aggregator/templates/deployment.yaml
+++ b/charts/lr-aggregator/templates/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: kube-system
   labels:
     app: {{ template "logrange.name" . }}
+    appVersion: {{ .Values.args.version }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -18,6 +19,7 @@ spec:
     metadata:
       labels:
         app: {{ template "logrange.name" . }}
+        appVersion: {{ .Values.args.version }}
         release: {{ .Release.Name }}
 {{- with .Values.podAnnotations }}
       annotations:
@@ -28,7 +30,7 @@ spec:
         runAsUser: 0
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.args.version }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: rpc
