--- a/charts/lr-aggregator/templates/service.yaml
+++ b/charts/lr-aggregator/templates/service.yaml
@@ -9,6 +9,7 @@ metadata:
 {{- end }}
   labels:
     app: {{ template "logrange.name" . }}
+    appVersion: {{ .Values.args.version }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
