--- a/charts/lr-collector/templates/daemonset.yaml
+++ b/charts/lr-collector/templates/daemonset.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: kube-system
   labels:
     app: {{ template "collector.name" . }}
+    appVersion: {{ .Values.args.version }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -17,6 +18,7 @@ spec:
     metadata:
       labels:
         app: {{ template "collector.name" . }}
+        appVersion: {{ .Values.args.version }}
         release: {{ .Release.Name }}
 {{- with .Values.podAnnotations }}
       annotations:
@@ -27,7 +29,7 @@ spec:
         runAsUser: 0
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.args.version }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
             - name: config
