--- a/charts/lr-collector/values.yaml
+++ b/charts/lr-collector/values.yaml
@@ -1,9 +1,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+args:
+  version: "v0.0.4"
+
 image:
   repository: index.docker.io/logrange/collector
-  tag: latest
   pullPolicy: Always
 
 volumes:
