--- a/charts/lr-configs/values.yaml
+++ b/charts/lr-configs/values.yaml
@@ -1,20 +1,6 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+args:
+  version: "v0.0.4"
 
-image:
-  repository: index.docker.io/logrange/configs
-  tag: latest
-  pullPolicy: Always
-
-resources: {}
-
-podAnnotations:
-  seccomp.security.alpha.kubernetes.io/pod: docker/default
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
