--- a/images/forwarder/Dockerfile
+++ b/images/forwarder/Dockerfile
@@ -1,13 +1,4 @@
-FROM debian:stable
-
-RUN apt-get -q -y update && \
-    apt-get install --no-install-recommends -y -q \
-    procps \
-    curl \
-    less \
-    dnsutils \
-    netcat \
-    vim
+FROM debian:stretch
 
 RUN mkdir -p /opt/logrange/lr
 
