--- a/charts/lr-collector/values.yaml
+++ b/charts/lr-collector/values.yaml
@@ -11,6 +11,7 @@ image:
 volumes:
   varlog: /var/log
   varliblogrange: /var/lib/logrange
+  varlibdockercontainers: /var/lib/docker/containers
   extdockercontainers: /ext/docker/containers
 
 resources: {}
